Include guard and lazyThrow

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     "autoload": {
         "psr-4": {
             "Dflydev\\EventSauce\\Support\\": "src/"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
     "extra": {
         "branch-alias": {
