--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,7 @@
+includes:
+
+	- phpstan-baseline.neon
+
 parameters:
 
 	paths:
@@ -7,7 +11,3 @@ parameters:
 	level: max
 
 	checkMissingIterableValueType: false
-	checkGenericClassInNonGenericObjectType: false
-
-	# TODO Check later
-	treatPhpDocTypesAsCertain: false
