--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,25 @@
 {
     "name": "dflydev/eventsauce-support",
-    "type": "library",
     "license": "MIT",
+    "type": "library",
     "require": {
-        "php": "^8.1",
+        "php": "^8.1 || ^8.2",
         "eventsauce/eventsauce": "^3",
-        "eventsauce/message-outbox": "^0.3||^0.4"
+        "eventsauce/message-outbox": "^0.3 || ^0.4"
     },
+    "require-dev": {
+        "dflydev/php-coding-standards": "dev-main",
+        "ergebnis/composer-normalize": "^2.31",
+        "ergebnis/license": "^2.1",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9 || ^10"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/dflydev/dflydev-php-coding-standards"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Dflydev\\EventSauce\\Support\\": "src/"
@@ -15,14 +28,20 @@
             "src/functions.php"
         ]
     },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        },
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-main": "0.x-dev"
         }
     },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.15.1",
-        "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^9|^10"
+    "scripts": {
+        "style:check": "@php ./vendor/bin/php-cs-fixer fix --dry-run",
+        "style:fix": "@php ./vendor/bin/php-cs-fixer fix"
     }
 }
